--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfb-mJ-gqh">
-                        <rect key="frame" x="13" y="20" width="271" height="21"/>
+                        <rect key="frame" x="13" y="20" width="255" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="gK4-Yo-F8o"/>
                         </constraints>
@@ -26,11 +26,11 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="zww-Vg-7eJ">
-                        <rect key="frame" x="294" y="24.5" width="8" height="12"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRight" translatesAutoresizingMaskIntoConstraints="NO" id="zww-Vg-7eJ">
+                        <rect key="frame" x="278" y="18.5" width="24" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="8" id="JKO-Pz-j2U"/>
-                            <constraint firstAttribute="height" constant="12" id="pUs-nD-Non"/>
+                            <constraint firstAttribute="width" constant="24" id="JKO-Pz-j2U"/>
+                            <constraint firstAttribute="height" constant="24" id="pUs-nD-Non"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-zT-JDN">
@@ -52,7 +52,7 @@
                     <constraint firstItem="cfb-mJ-gqh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="wT7-gn-Wm0"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" name="primaryBackground"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <connections>
                 <outlet property="separatorView" destination="Ohf-zT-JDN" id="67p-mU-Oy2"/>
                 <outlet property="titleLabel" destination="cfb-mJ-gqh" id="IDm-Ns-Cr2"/>
@@ -61,8 +61,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Arrow" width="8" height="12"/>
-        <namedColor name="primaryBackground">
+        <image name="iconArrowRight" width="24" height="24"/>
+        <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
