--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
@@ -245,7 +245,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="oX3-1e-3qp" secondAttribute="trailing" constant="28" id="2A3-VO-A9s"/>
                         <constraint firstAttribute="height" constant="190" id="5ax-aT-f08"/>
@@ -259,7 +259,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" name="primaryBackground"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="PbB-FE-kg4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0lM-mc-FKG"/>
                 <constraint firstAttribute="trailing" secondItem="PbB-FE-kg4" secondAttribute="trailing" id="fMR-41-CjY"/>
@@ -290,9 +290,6 @@
         <image name="iconModeAutomaticUnselect" width="24" height="24"/>
         <image name="iconModeDarkUnselect" width="25" height="24"/>
         <image name="iconModeLightSelect" width="24" height="24"/>
-        <namedColor name="primaryBackground">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
