--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingHeaderView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingHeaderView.xib
@@ -29,7 +29,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" name="primaryBackground"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Fzp-vs-7OY" secondAttribute="trailing" id="1kI-bB-KjQ"/>
                 <constraint firstItem="dT6-JG-J0F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XWp-K6-BY1"/>
@@ -46,9 +46,6 @@
     <resources>
         <namedColor name="darkBorder">
             <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="primaryBackground">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
