--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
@@ -20,6 +20,12 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eh9-cA-xIe">
                         <rect key="frame" x="0.0" y="0.0" width="232" height="206"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6S-kX-bO1">
+                        <rect key="frame" x="11" y="170" width="210" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -27,11 +33,15 @@
                 <constraint firstItem="eh9-cA-xIe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8Jk-Zi-5SB"/>
                 <constraint firstItem="eh9-cA-xIe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="96c-8m-H9t"/>
                 <constraint firstAttribute="trailing" secondItem="eh9-cA-xIe" secondAttribute="trailing" id="D0L-Dy-ju9"/>
+                <constraint firstAttribute="bottom" secondItem="q6S-kX-bO1" secondAttribute="bottom" constant="15" id="OqM-M0-9xl"/>
+                <constraint firstAttribute="trailing" secondItem="q6S-kX-bO1" secondAttribute="trailing" constant="11" id="TGC-4y-Bao"/>
+                <constraint firstItem="q6S-kX-bO1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="11" id="X3p-GT-962"/>
                 <constraint firstAttribute="bottom" secondItem="eh9-cA-xIe" secondAttribute="bottom" id="tJC-Ro-vym"/>
             </constraints>
             <size key="customSize" width="232" height="206"/>
             <connections>
                 <outlet property="thumbnailImage" destination="eh9-cA-xIe" id="sZ5-kn-Hcs"/>
+                <outlet property="titleLabel" destination="q6S-kX-bO1" id="Yfn-k6-dsX"/>
             </connections>
             <point key="canvasLocation" x="269.56521739130437" y="174.10714285714286"/>
         </collectionViewCell>
