LB-1405 Facelift - For You
in progress

--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTableViewCell.xib
@@ -42,7 +42,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <action selector="seeAllButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="mLm-gQ-ZxV"/>
+                                    <action selector="seeAllButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="lgw-cy-KFf"/>
                                 </connections>
                             </button>
                         </subviews>
