--- a/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -99,11 +99,11 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JEG-SY-yH4">
-                                    <rect key="frame" x="0.0" y="246" width="414" height="318"/>
+                                    <rect key="frame" x="0.0" y="246" width="414" height="337"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3pB-Lp-wU7">
-                                    <rect key="frame" x="20" y="246" width="374" height="318"/>
+                                    <rect key="frame" x="20" y="246" width="374" height="337"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="zR0-Yb-crR" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="80"/>
@@ -117,8 +117,15 @@
                                             <rect key="frame" x="0.0" y="192" width="374" height="80"/>
                                             <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="amm-cu-bEu">
+                                            <rect key="frame" x="0.0" y="288" width="374" height="3"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="3" id="j3N-cB-Seu"/>
+                                            </constraints>
+                                        </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="s8F-tB-ErQ" customClass="AccessibleCheckBoxView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="288" width="374" height="30"/>
+                                            <rect key="frame" x="0.0" y="307" width="374" height="30"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nqg-tP-cJg">
                                                     <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
@@ -126,7 +133,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="cwh-mx-goD"/>
                                                         <constraint firstAttribute="width" constant="30" id="n9k-EG-7ih"/>
                                                     </constraints>
-                                                    <state key="normal" image="checkbox"/>
+                                                    <state key="normal" image="iconSelectCheck"/>
                                                     <state key="selected" image="checkboxSelected"/>
                                                     <connections>
                                                         <action selector="onRememberMeTap:" destination="-1" eventType="touchUpInside" id="gan-Xb-wfe"/>
@@ -158,7 +165,7 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhc-pL-wnH" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="52" y="614" width="310.5" height="44"/>
+                                    <rect key="frame" x="52" y="633" width="310.5" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="G6T-7F-LuP"/>
                                     </constraints>
@@ -210,9 +217,9 @@
         </view>
     </objects>
     <resources>
-        <image name="checkbox" width="18" height="18"/>
         <image name="checkboxSelected" width="26" height="26"/>
         <image name="chevronLeft" width="16" height="9"/>
+        <image name="iconSelectCheck" width="24" height="24"/>
         <image name="question_symbol" width="31" height="55"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
